test/bad/sample40.dave
＃ test lexical analysis
int main() {
	int #abc = 78;
	print(#abc);
}